--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body{
 .header{
   display: flex;
   flex-direction: row;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 .nameUser{
@@ -26,12 +26,23 @@ body{
   font-family: 'Source Serif Pro';
   font-style: normal;
   font-weight: 600;
-  font-size: 27px;
+  font-size: 29px;
   line-height: 34px;
+
+  height: 5%;
+  width: 50%;
+  padding: 2%;
+}
+.singOffButton{
+  height: 12%;
+  width: 4%;
+  position: relative;
+  padding: 2%;
 }
  /*footer*/
 .footer{
   text-align: center;
+  padding: 2%;
 }
 h6{
   font-family: 'Source Serif pro';
@@ -50,8 +61,8 @@ h6{
   display:flex;
   flex-direction: column;
   justify-content: space-evenly;
-  background-color: #FCFEFB;
   align-items: center;
+  background-color: #FCFEFB; /*#FCFEFB*/
 }
                                   /*En orden de uso*/
   /*Primera vista: Login*/
@@ -68,7 +79,14 @@ h1{
   width: 272px;
   height: 82px;
 }
-   /**/
+  /*Segunda vista: Welcome*/
+.btnNewNote{
+  display: flex;
+  justify-content: center;
+ 
+  height: 5%;
+  width:4%
+}
       /**/
          /**/
             /**/
